c/include/cowrie_gen2.h

/* Value types for the AST */
typedef enum {
    COWRIE_NULL,
    COWRIE_BOOL,
    COWRIE_INT64,
    COWRIE_UINT64,
    COWRIE_FLOAT64,
    COWRIE_DECIMAL128,
    COWRIE_STRING,
    COWRIE_BYTES,
    COWRIE_DATETIME64,
    COWRIE_UUID128,
    COWRIE_BIGINT,
    COWRIE_EXT,
    COWRIE_ARRAY,
    COWRIE_OBJECT,
    /* v2.1 extension types */
    COWRIE_TENSOR,
    COWRIE_TENSOR_REF,
    COWRIE_IMAGE,
    COWRIE_AUDIO,
    COWRIE_ADJLIST,
    COWRIE_RICH_TEXT,
    COWRIE_DELTA,
    /* v2.1 Graph types */
    COWRIE_NODE,
    COWRIE_EDGE,
    COWRIE_NODE_BATCH,
    COWRIE_EDGE_BATCH,
    COWRIE_GRAPH_SHARD,
    /* v3 types */
    COWRIE_BITMASK
} COWRIEType;
/* Forward declarations */
typedef struct COWRIEValue COWRIEValue;
typedef struct COWRIEMember COWRIEMember;
/* Decimal128: value = coef * 10^(-scale) */
typedef struct {
    int8_t scale;          /* -127 to +127 */
    uint8_t coef[16];      /* two's complement big-endian */
} COWRIEDecimal128;
/* Unknown extension payload (TagExt) */
typedef struct {
    uint64_t ext_type;
    uint8_t *payload;
    size_t payload_len;
} COWRIEExt;
/* ============================================================
 * v2.1 Extension Type Structs
 * ============================================================ */

/* Tensor: embeddings, feature vectors, model I/O */
typedef struct {
    uint8_t dtype;         /* COWRIEDType enum */
    uint8_t rank;          /* number of dimensions */
    size_t *dims;          /* dimension sizes [rank] */
    uint8_t *data;         /* raw tensor bytes, row-major */
    size_t data_len;
} COWRIETensor;
/* TensorRef: reference to stored tensor (vector DB, KV cache) */
typedef struct {
    uint8_t store_id;      /* which store/shard */
    uint8_t *key;          /* lookup key (UUID, hash, etc.) */
    size_t key_len;
} COWRIETensorRef;
/* Image: raw images without base64 */
typedef struct {
    uint8_t format;        /* COWRIEImageFormat enum */
    uint16_t width;
    uint16_t height;
    uint8_t *data;         /* encoded image bytes */
    size_t data_len;
} COWRIEImage;
/* Audio: waveforms, voice clips */
typedef struct {
    uint8_t encoding;      /* COWRIEAudioEncoding enum */
    uint32_t sample_rate;
    uint8_t channels;
    uint8_t *data;
    size_t data_len;
} COWRIEAudio;
/* Adjlist: CSR adjacency list for graphs/GNNs */
typedef struct {
    uint8_t id_width;      /* COWRIEIdWidth: 1=int32, 2=int64 */
    size_t node_count;
    size_t edge_count;
    size_t *row_offsets;   /* [node_count + 1] */
    void *col_indices;     /* int32_t* or int64_t* based on id_width */
} COWRIEAdjlist;
/* RichText: text with optional token IDs and spans */
typedef struct {
    char *text;
    size_t text_len;
    int32_t *tokens;       /* int32 token IDs, or NULL */
    size_t token_count;
    COWRIERichTextSpan *spans;  /* annotated spans, or NULL */
    size_t span_count;
} COWRIERichText;
/* Delta: semantic diff/patch vs previous state */
typedef struct {
    size_t base_id;        /* reference to base object */
    COWRIEDeltaOp_t *ops;
    size_t op_count;
} COWRIEDelta;
/* ============================================================
 * v2.1 Graph Type Structs
 * ============================================================ */

/* Node: graph node with ID, labels, and properties */
typedef struct {
    char *id;              /* node identifier */
    size_t id_len;
    char **labels;         /* label strings */
    size_t *label_lens;    /* label string lengths */
    size_t label_count;
    COWRIEMember *props;    /* dictionary-coded properties */
    size_t prop_count;
} COWRIENode;
/* Edge: graph edge with source, destination, type, and properties */
typedef struct {
    char *from_id;         /* source node ID */
    size_t from_id_len;
    char *to_id;           /* destination node ID */
    size_t to_id_len;
    char *edge_type;       /* edge type/label */
    size_t edge_type_len;
    COWRIEMember *props;    /* dictionary-coded properties */
    size_t prop_count;
} COWRIEEdge;
/* NodeBatch: batch of nodes for streaming */
typedef struct {
    COWRIENode *nodes;
    size_t node_count;
} COWRIENodeBatch;
/* EdgeBatch: batch of edges for streaming */
typedef struct {
    COWRIEEdge *edges;
    size_t edge_count;
} COWRIEEdgeBatch;
/* GraphShard: self-contained subgraph */
typedef struct {
    COWRIENode *nodes;
    size_t node_count;
    COWRIEEdge *edges;
    size_t edge_count;
    COWRIEMember *metadata; /* dictionary-coded metadata */
    size_t meta_count;
} COWRIEGraphShard;
/* Bitmask: packed boolean array (v3) */
typedef struct {
    uint64_t count;        /* number of boolean values */
    uint8_t *bits;         /* packed bits, ceil(count/8) bytes, LSB-first */
    size_t bits_len;       /* byte length of bits array */
} COWRIEBitmask;
/* Object member (key-value pair) */
struct COWRIEMember {
    char *key;
    size_t key_len;
    COWRIEValue *value;
};
/* The main value union */
struct COWRIEValue {
    COWRIEType type;
    union {
        int boolean;                    /* COWRIE_BOOL */
        int64_t i64;                    /* COWRIE_INT64 */
        uint64_t u64;                   /* COWRIE_UINT64 */
        double f64;                     /* COWRIE_FLOAT64 */
        COWRIEDecimal128 decimal128;     /* COWRIE_DECIMAL128 */
        struct {
            char *data;
            size_t len;
        } str;                          /* COWRIE_STRING */
        struct {
            uint8_t *data;
            size_t len;
        } bytes;                        /* COWRIE_BYTES */
        int64_t datetime64;             /* COWRIE_DATETIME64 (nanos since epoch) */
        uint8_t uuid[16];               /* COWRIE_UUID128 */
        struct {
            uint8_t *data;
            size_t len;
        } bigint;                       /* COWRIE_BIGINT (two's complement BE) */
        COWRIEExt ext;                   /* COWRIE_EXT */
        struct {
            COWRIEValue **items;
            size_t len;
        } array;                        /* COWRIE_ARRAY */
        struct {
            COWRIEMember *members;
            size_t len;
        } object;                       /* COWRIE_OBJECT */
        /* v2.1 extension types */
        COWRIETensor tensor;             /* COWRIE_TENSOR */
        COWRIETensorRef tensor_ref;      /* COWRIE_TENSOR_REF */
        COWRIEImage image;               /* COWRIE_IMAGE */
        COWRIEAudio audio;               /* COWRIE_AUDIO */
        COWRIEAdjlist adjlist;           /* COWRIE_ADJLIST */
        COWRIERichText rich_text;        /* COWRIE_RICH_TEXT */
        COWRIEDelta delta;               /* COWRIE_DELTA */
        /* v2.1 Graph types */
        COWRIENode node;                 /* COWRIE_NODE */
        COWRIEEdge edge;                 /* COWRIE_EDGE */
        COWRIENodeBatch node_batch;      /* COWRIE_NODE_BATCH */
        COWRIEEdgeBatch edge_batch;      /* COWRIE_EDGE_BATCH */
        COWRIEGraphShard graph_shard;    /* COWRIE_GRAPH_SHARD */
        /* v3 types */
        COWRIEBitmask bitmask;           /* COWRIE_BITMASK */
    } as;
};
/* Buffer for encoding */
typedef struct {
    uint8_t *data;
    size_t len;
    size_t cap;
} COWRIEBuf;
/* ============================================================
 * Value Constructors
 * ============================================================ */

COWRIEValue *cowrie_new_null(void);
COWRIEValue *cowrie_new_bool(int b);
COWRIEValue *cowrie_new_int64(int64_t i);
COWRIEValue *cowrie_new_uint64(uint64_t u);
COWRIEValue *cowrie_new_float64(double f);
COWRIEValue *cowrie_new_string(const char *s, size_t len);
COWRIEValue *cowrie_new_bytes(const uint8_t *data, size_t len);
COWRIEValue *cowrie_new_array(void);
COWRIEValue *cowrie_new_object(void);
/* v2.1 Extension Constructors */
COWRIEValue *cowrie_new_tensor(uint8_t dtype, uint8_t rank, const size_t *dims,
                              const uint8_t *data, size_t data_len);
/* ============================================================
 * Value Manipulation
 * ============================================================ */

/* Array operations */
int cowrie_array_append(COWRIEValue *arr, COWRIEValue *item);
/* Object operations */
int cowrie_object_set(COWRIEValue *obj, const char *key, size_t key_len, COWRIEValue *value);
/* Memory management */
void cowrie_free(COWRIEValue *v);
/*
 * Encode a value to COWRIE v2 binary format.
 * Returns 0 on success, -1 on error.
 * Caller must free buf->data when done.
 */
int cowrie_encode(const COWRIEValue *root, COWRIEBuf *buf);
/* ============================================================
 * Utilities
 * ============================================================ */

/* ── Direct Encode API (zero-malloc, Go-style) ── */

/*
 * Encode a tensor directly to buffer without building a value tree.
 * Zero malloc — just writes tag + dtype + rank + dims + len + raw data.
 * This is the fast path for tensor serialization (vLLM, inference, etc).
 */
int cowrie_direct_encode_tensor(COWRIEBuf *buf, uint8_t dtype, uint8_t rank,
                                const size_t *dims, const uint8_t *data, size_t data_len);
/* Buffer helpers */
void cowrie_buf_init(COWRIEBuf *buf);
void cowrie_buf_free(COWRIEBuf *buf);