python/cowrie/_cext.pyx


    if obj is None:
        return wb_byte(b, TAG_NULL)
    if obj is True:
        return wb_byte(b, TAG_TRUE)
    if obj is False:
        return wb_byte(b, TAG_FALSE)
    if PyLong_CheckExact(obj):
        ival = <int64_t>obj
        if 0 <= ival <= 127:
            return wb_byte(b, <uint8_t>(FIXINT_BASE + ival))
        if -16 <= ival <= -1:
            return wb_byte(b, <uint8_t>(FIXNEG_BASE + (-1 - ival)))
        if wb_byte(b, TAG_INT64) != 0: return -1
        return wb_zigzag(b, ival)
    if PyFloat_CheckExact(obj):
        fval = PyFloat_AS_DOUBLE(obj)
        if wb_byte(b, TAG_FLOAT64) != 0: return -1
        return wb_raw(b, &fval, 8)
    if PyUnicode_CheckExact(obj):
        utf8 = PyUnicode_AsUTF8AndSize(obj, &utf8_len)
        if wb_byte(b, TAG_STRING) != 0: return -1
        if wb_uvarint(b, <uint64_t>utf8_len) != 0: return -1
        return wb_raw(b, utf8, utf8_len)
    if PyBytes_CheckExact(obj):
        n = PyBytes_GET_SIZE(obj)
        if wb_byte(b, TAG_BYTES) != 0: return -1
        if wb_uvarint(b, <uint64_t>n) != 0: return -1
        return wb_raw(b, PyBytes_AS_STRING(obj), n)
    if PyDict_CheckExact(obj):
        n = len(obj)
        if n <= 15:
            if wb_byte(b, <uint8_t>(FIXMAP_BASE + n)) != 0: return -1
        else:
            if wb_byte(b, TAG_OBJECT) != 0: return -1
            if wb_uvarint(b, <uint64_t>n) != 0: return -1
        for k, v in (<dict>obj).items():
            ks = k if PyUnicode_CheckExact(k) else str(k)
            kidx = key_idx[ks]
            if wb_uvarint(b, <uint64_t>kidx) != 0: return -1
            if _write(v, b, key_idx) != 0: return -1
        return 0
    if PyList_CheckExact(obj) or PyTuple_CheckExact(obj):
        n = len(obj)
        if n <= 15:
            if wb_byte(b, <uint8_t>(FIXARRAY_BASE + n)) != 0: return -1
        else:
            if wb_byte(b, TAG_ARRAY) != 0: return -1
            if wb_uvarint(b, <uint64_t>n) != 0: return -1
        for item in obj:
            if _write(item, b, key_idx) != 0: return -1
        return 0
    if isinstance(obj, np.ndarray):
        arr = np.ascontiguousarray(obj)
        dtype_code = _NP_DTYPE_MAP.get(arr.dtype, DTYPE_FLOAT32)
        rank = <uint8_t>cnp.PyArray_NDIM(arr)
        ashape = cnp.PyArray_DIMS(arr)
        if wb_byte(b, TAG_TENSOR) != 0: return -1
        if wb_byte(b, dtype_code) != 0: return -1
        if wb_byte(b, rank) != 0: return -1
        for i in range(rank):
            if wb_uvarint(b, <uint64_t>ashape[i]) != 0: return -1
        if wb_uvarint(b, <uint64_t>arr.nbytes) != 0: return -1
        return wb_raw(b, <const uint8_t*>cnp.PyArray_DATA(arr), <size_t>arr.nbytes)

    raise TypeError(f"Cannot direct-encode {type(obj)}")


# ── Public API ────────────────────────────────────────────────────

# Keep old _to_c + cowrie_encode for fallback
cdef extern from "cowrie_gen2.h":
    ctypedef struct COWRIEBuf:
        uint8_t *data
        size_t len
        size_t cap
    ctypedef struct COWRIEValue:
        pass
    void cowrie_buf_init(COWRIEBuf *buf)
    void cowrie_buf_free(COWRIEBuf *buf)
    COWRIEValue *cowrie_new_null()
    COWRIEValue *cowrie_new_bool(int b)
    COWRIEValue *cowrie_new_int64(int64_t i)
    COWRIEValue *cowrie_new_uint64(uint64_t u)
    COWRIEValue *cowrie_new_float64(double f)
    COWRIEValue *cowrie_new_string(const char *s, size_t length)
    COWRIEValue *cowrie_new_bytes(const uint8_t *data, size_t length)
    COWRIEValue *cowrie_new_array()
    COWRIEValue *cowrie_new_object()
    COWRIEValue *cowrie_new_tensor(uint8_t dtype, uint8_t rank,
                                   const size_t *dims,
                                   const uint8_t *data, size_t data_len)
    int cowrie_array_append(COWRIEValue *arr, COWRIEValue *item)
    int cowrie_object_set(COWRIEValue *obj, const char *key, size_t key_len,
                          COWRIEValue *value)
    int cowrie_encode(const COWRIEValue *root, COWRIEBuf *buf)
    void cowrie_free(COWRIEValue *v)
    int cowrie_direct_encode_tensor(COWRIEBuf *buf, uint8_t dtype, uint8_t rank,
                                    const size_t *dims, const uint8_t *data,
                                    size_t data_len)

cdef COWRIEValue* _to_c_fallback(object obj) except NULL:
    """Fallback: build COWRIEValue tree for types direct writer can't handle."""
    _cache()
    cdef COWRIEValue *result
    cdef COWRIEValue *child
    cdef const char *utf8
    cdef Py_ssize_t utf8_len
    cdef cnp.ndarray arr
    cdef cnp.npy_intp *ashape
    cdef size_t dims[32]
    cdef uint8_t dtype_code, rank
    cdef Py_ssize_t i
    cdef int t

    if isinstance(obj, _Value):
        t = obj.type; d = obj.data
        if t == _T_NULL: return cowrie_new_null()
        elif t == _T_BOOL: return cowrie_new_bool(1 if d else 0)
        elif t == _T_INT64: return cowrie_new_int64(<int64_t>d)
        elif t == _T_UINT64: return cowrie_new_uint64(<uint64_t>d)
        elif t == _T_FLOAT64: return cowrie_new_float64(<double>d)
        elif t == _T_STRING:
            utf8 = PyUnicode_AsUTF8AndSize(d, &utf8_len)
            return cowrie_new_string(utf8, <size_t>utf8_len)
        elif t == _T_BYTES:
            return cowrie_new_bytes(<const uint8_t*><const char*>d, len(d))
        elif t == _T_ARRAY:
            result = cowrie_new_array()
            for item in d:
                child = _to_c_fallback(item)
                cowrie_array_append(result, child)
            return result
        elif t == _T_OBJECT:
            result = cowrie_new_object()
            for k, v in d.items():
                utf8 = PyUnicode_AsUTF8AndSize(k, &utf8_len)
                child = _to_c_fallback(v)
                cowrie_object_set(result, utf8, <size_t>utf8_len, child)
            return result
        elif t == _T_TENSOR:
            td = d
            if hasattr(td, 'to_numpy'):
                arr = np.ascontiguousarray(td.to_numpy())
                dtype_code = _NP_DTYPE_MAP.get(arr.dtype, DTYPE_FLOAT32)
                rank = <uint8_t>cnp.PyArray_NDIM(arr)
                ashape = cnp.PyArray_DIMS(arr)
                for i in range(rank): dims[i] = <size_t>ashape[i]
                return cowrie_new_tensor(dtype_code, rank, dims,
                    <const uint8_t*>cnp.PyArray_DATA(arr), <size_t>arr.nbytes)
    # For anything else, let it fail — gen2.py pure Python fallback handles it
    raise TypeError(f"Fallback cannot handle type: {type(obj)}")


def cython_encode(obj) -> bytes:
    """Encode Python Value/dict/list to cowrie bytes. Direct wire writer, no C tree."""
    _cache()

    # Pass 1: collect unique keys
    cdef dict key_idx = {}
    cdef list key_order = []
    _collect(obj, key_idx, key_order)

    # Allocate write buffer (4KB initial — covers most payloads)
    cdef WBuf b
    b.cap = 4096
    b.pos = 0
    b.data = <uint8_t*>malloc(b.cap)
    if b.data == NULL:
        raise MemoryError()

    cdef const char *kp
    cdef Py_ssize_t kl
    cdef COWRIEValue *c_val
    cdef COWRIEBuf cbuf
    cdef int rc

    try:
        # Write header: 'S' 'J' version=2 flags=0
        wb_byte(&b, 0x53)  # 'S'
        wb_byte(&b, 0x4A)  # 'J'
        wb_byte(&b, 0x02)  # version
        wb_byte(&b, 0x00)  # flags

        # Write dictionary
        wb_uvarint(&b, <uint64_t>len(key_order))
        for k in key_order:
            kp = PyUnicode_AsUTF8AndSize(k, &kl)
            wb_uvarint(&b, <uint64_t>kl)
            wb_raw(&b, kp, kl)

        # Pass 2: write values
        _write(obj, &b, key_idx)

        return PyBytes_FromStringAndSize(<const char*>b.data, b.pos)
    except TypeError:
        # Unsupported type — fall back to C tree builder
        free(b.data)
        b.data = NULL
        c_val = _to_c_fallback(obj)
        cowrie_buf_init(&cbuf)
        rc = cowrie_encode(c_val, &cbuf)
        cowrie_free(c_val)
        if rc != 0:
            cowrie_buf_free(&cbuf)
            raise RuntimeError("cowrie_encode fallback failed")
        result = PyBytes_FromStringAndSize(<const char*>cbuf.data, cbuf.len)
        cowrie_buf_free(&cbuf)
        return result
    finally:
        if b.data != NULL:
            free(b.data)


def cython_encode_tensor(object arr_in) -> bytes:
    """Encode a numpy array as cowrie tensor bytes."""
    cdef cnp.ndarray arr = np.ascontiguousarray(arr_in)
    cdef uint8_t dtype_code = _NP_DTYPE_MAP.get(arr.dtype, DTYPE_FLOAT32)
    cdef uint8_t rank = <uint8_t>cnp.PyArray_NDIM(arr)
    cdef size_t dims[32]
    cdef Py_ssize_t i
    cdef cnp.npy_intp *shape = cnp.PyArray_DIMS(arr)
    for i in range(rank): dims[i] = <size_t>shape[i]
    cdef COWRIEBuf buf
    cowrie_buf_init(&buf)
    cdef int rc = cowrie_direct_encode_tensor(
        &buf, dtype_code, rank, dims,
        <const uint8_t*>cnp.PyArray_DATA(arr), <size_t>arr.nbytes)
    if rc != 0:
        cowrie_buf_free(&buf)
        raise RuntimeError("cowrie_direct_encode_tensor failed")
    cdef bytes result = PyBytes_FromStringAndSize(<const char*>buf.data, buf.len)
    cowrie_buf_free(&buf)
    return result
